fixed margin on mobile and scrolling

--- a/source/scss/4-layout/header.scss
+++ b/source/scss/4-layout/header.scss
@@ -6,8 +6,8 @@ header {
   width: 100vw;
   z-index: 500;
   position: relative;
-  top: -5px;
-  transform: translateY(5px);
+  top: -10px;
+  transform: translateY(10px);
   transition: top 0.3s ease-out;
 
   /* Responsiveness of nav */
