--- a/source/scss/6-responsive/header-mobile.scss
+++ b/source/scss/6-responsive/header-mobile.scss
@@ -1,118 +1,122 @@
-@media #{$device-sm}{
- .burgers{
-  display:block !important;
- }
+@media #{$device-sm} {
+  .burgers {
+    display: block !important;
+  }
 
- .menu-nav-container{
-  position:absolute;
-  right:0px;
-  height:100vh;
-  top:0;
-  background:var(--dark);
-  width:80%;
-  transform: translateX(100%);
-  z-index:5000;
-  transition: all 0.3s var(--anim-primary);
-  margin:0 -2rem;
-  
-  .top-menu{
-   display:flex;
-   flex-direction: column;
-   margin-top:20px;
-   
-   li{
-    margin: 0 1rem;
-    text-align: left;
-    height:auto;
-    display:block;
-    font-size:1rem;
+  .menu-nav-container {
+    position: absolute;
+    right: 0px;
+    height: 100vh;
+    top: 0;
+    background: var(--dark);
+    width: 80%;
+    transform: translateX(100%);
+    z-index: 5000;
+    transition: all 0.3s var(--anim-primary);
+    margin: 0 -2rem;
 
-    &:not(:last-of-type){
-      border-bottom: 2px solid var(--white);
-    }
+    .top-menu {
+      display: flex;
+      flex-direction: column;
 
-    /* &:hover>.sub-menu {
+      li {
+        margin: 0 1rem;
+        text-align: left;
+        height: auto;
+        display: block;
+        font-size: 1rem;
+
+        &:not(:last-of-type) {
+          border-bottom: 2px solid var(--white);
+        }
+
+        /* &:hover>.sub-menu {
       visibility: hidden;
       opacity: 0;
     } */
 
-   }
+      }
 
-   
 
-  }
- }
 
-.menu-item {
-  >a {
-    padding: 0.75rem 0;
-    display:block;
-  }
-}
-
-/* Submenu */
-
-.menu-item-has-children {
-  >.sub-menu {
-    position: relative;
-    background: transparent;
-    max-height:0;
-    display:block;
-    margin-top: 0;
-    top: 0;
-    left: 0;
-    width:100%;
-    overflow:hidden;
-    transition: max-height 0.4s ease-in-out !important;
-    
-    a {
-      padding: 15px 0 15px 10px;
     }
   }
+
+  .menu-item {
+    >a {
+      padding: 0.75rem 0;
+      display: block;
+    }
+  }
+
+  /* Submenu */
+
+  .menu-item-has-children {
+    >.sub-menu {
+      position: relative;
+      background: transparent;
+      max-height: 0;
+      display: block;
+      margin-top: 0;
+      top: 0;
+      left: 0;
+      width: 100%;
+      overflow: hidden;
+      transition: max-height 0.4s ease-in-out !important;
+
+      a {
+        padding: 15px 0 15px 10px;
+      }
+    }
+  }
+
+  .menu-overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 4000;
+    background: rgba(0, 0, 0, 0);
+    visibility: hidden;
+    pointer-events: none;
+    display: block;
+    margin: 0 -2rem;
+  }
+
+  /* Show effect of Menu */
+  .menu-overlay--show {
+    visibility: visible;
+    background: rgba(0, 0, 0, 0.5);
+    pointer-events: auto;
+    cursor: pointer;
+  }
+
+  .menu--show {
+    transform: translateX(0);
+
+    .top-menu {
+      margin-top: 20px;
+    }
+  }
+
+  .sub-menu--show {
+    visibility: visible !important;
+    opacity: 1 !important;
+    max-height: 600px !important;
+
+  }
+
+
 }
 
- .menu-overlay{
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  z-index: 4000;
-  background: rgba(0, 0, 0, 0);
-  visibility: hidden;
-  pointer-events: none;
-  display:block;
-  margin:0 -2rem;
- }
- 
- /* Show effect of Menu */
- .menu-overlay--show{
-   visibility: visible;
-   background: rgba(0, 0, 0, 0.5);
-   pointer-events: auto;
-   cursor:pointer;
- }
 
- .menu--show{
-   transform: translateX(0);
- }
-
- .sub-menu--show{
-  visibility:visible !important;
-  opacity: 1 !important;
-  max-height:600px !important;
-  
- }
-  
-
-}
-
-
-@media #{$device-md}{
+@media #{$device-md} {
   .header__wrapper {
     padding: 0 2rem;
   }
 
-  .header__logo-img{
+  .header__logo-img {
     width: 17vw;
     min-width: 100px;
   }
